# t-ai-affectlog

./: .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.worker  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/codeql/: codeql-config.yml
.github/codeql/extensions/: path-sanitizers.model.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  deploy.yml  docker.yml  publish-docs.yml  sonar.yml
configs/: affectlog.default.yaml
configs/mappings/: ai_act_annex_iv.yaml  gdpr_fields.yaml  pii_patterns.yaml  xapi_verbs.yaml
configs/recipes/: generic_tabular_model_audit.yaml  generic_xapi.yaml  inokufu_becomino.yaml  maskott_tactileo.yaml
data/samples/: becomino_sample.json  generic_xapi_sample.jsonl
docs/: api.md  architecture.md  carisma-lola-interoperability.md  compliance-mapping.md  data-governance.md  deliverable-final-pack.md  index.md  model-adapters.md  openapi.yaml  privacy-and-security.md  recipes.md  trl-assessment.md  visual-qa-checklist.md
docs/adr/: 0001-architecture.md  0002-large-dataset-processing.md  0003-privacy-defaults.md  0004-openapi-and-pdc-interoperability.md
docs/deliverables/: README.md
examples/carisma_lola_interoperability/: metadata-exchange-example.json
scripts/: benchmark_million_rows.sh  create_initial_admin.py  dev.sh  generate_synthetic_maskott_csv.py  run_local_demo.sh  seed_rbac.py  validate_openapi.sh
src/affectlog/: __init__.py  cli.py  config.py  exceptions.py  logging.py
src/affectlog/api/: dependencies.py  main.py  security.py
src/affectlog/api/routers/: admin.py  audits.py  auth.py  compliance.py  datasets.py  editions.py  explanations.py  health.py  interoperability.py  models.py  pdc.py  platform_admin.py  public.py  transforms.py  wizard.py
src/affectlog/auth/: dependencies.py  onboarding.py  password.py  registration.py  tokens.py
src/affectlog/capabilities/: guardrails.py
src/affectlog/compliance/: ai_act_annex_iv.py  data_card.py  gdpr.py  jsonld.py  model_card.py  odrl.py  provenance.py  sop.py
src/affectlog/core/: artifact_store.py  email.py  hashing.py  ids.py  paths.py  run_context.py  time.py
src/affectlog/editions/: community.py  gates.py  managed.py
src/affectlog/explanations/: __init__.py  comparison.py  feature_importance.py  generator.py  permutation.py  shap_adapter.py
src/affectlog/frontend/: Dockerfile.frontend  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/affectlog/frontend/src/: App.tsx  api.ts  index.css
src/affectlog/frontend/src/api/: wizard.ts
src/affectlog/frontend/src/auth/: AuthProvider.tsx
src/affectlog/frontend/src/components/: AuditRun.tsx  BiasDashboard.tsx  CoverageChart.tsx  MetricsCards.tsx  RunArtifacts.tsx
src/affectlog/frontend/src/components/public/: PublicFooter.tsx  PublicHeader.tsx
src/affectlog/frontend/src/components/visuals/: AuditArtifactStack.tsx  ComplianceJsonLdGraphVisual.tsx  ConnectorInteroperabilityMap.tsx  DataSpaceConstellation.tsx  DatasetToModelPipeline.tsx  FairnessMetricRadar.tsx  GuidedWizardScopeVisual.tsx  ManagedSaaSControlPlaneVisual.tsx  ModelExplanationGraphVisual.tsx  RequestAccessJourneyVisual.tsx  SecurityShieldVisual.tsx  SelfHostedArchitectureVisual.tsx  XapiEventStream.tsx
src/affectlog/frontend/src/components/wizard/: StepInputSource.tsx  StepResultsGuidance.tsx  WizardShell.tsx
src/affectlog/frontend/src/content/: homepage.ts  wizardPresets.ts
src/affectlog/frontend/src/content/marketing/: developers.ts  home.ts  product.ts  security.ts
src/affectlog/frontend/src/design-system/: theme.css  tokens.ts
src/affectlog/frontend/src/design-system/layout/: ConsoleShell.tsx  ConsoleSidebar.tsx  (+4 more)
src/affectlog/frontend/src/pages/: Audit.tsx  Compliance.tsx  Datasets.tsx  Home.tsx  Models.tsx
src/affectlog/ingest/: csv_reader.py  json_reader.py  jsonl_reader.py  large_file.py  parquet_reader.py  schema_infer.py  validators.py
src/affectlog/interoperability/: carisma.py  lola.py
src/affectlog/jobs/: queue.py  status.py  worker.py
src/affectlog/metrics/: concentration.py  coverage.py  fairness.py  quality.py  recommender.py  representation.py
src/affectlog/models/: base.py  dummy_adapter.py  http_adapter.py  onnx_adapter.py  registry.py  sklearn_adapter.py  tensorflow_adapter.py  torch_adapter.py
src/affectlog/pdc/: __init__.py  auth.py  client.py  mock_server.py  odrl_policy.py
src/affectlog/privacy/: pii_detector.py  pseudonymizer.py  redaction.py  risk_scoring.py  security_layer.py
src/affectlog/profiling/: descriptive.py  drift.py  entropy.py  long_tail.py  schema_profiler.py  sparsity.py  temporal.py
src/affectlog/recipes/: __init__.py  base.py  loader.py  registry.py  runner.py
src/affectlog/reports/: dashboard_payload.py  markdown.py  tables.py
src/affectlog/schemas/: api.py  auth.py
src/affectlog/templates/email/: registration_approved_activation.html  registration_approved_activation.txt
src/affectlog/tenancy/: context.py  models.py  quotas.py
src/affectlog/transform/: __init__.py  becomino_template.py  duration.py  maskott_csv_to_xapi.py  normalizer.py  verb_mapper.py
src/affectlog/wizard/: executor.py  inspector.py  schemas.py
tests/e2e/: visual-screenshot.spec.ts
tests/fixtures/: becomino_sample.json  maskott_small.csv
tests/integration/: test_api_dataset_transform.py  test_api_openapi_contract.py  test_cli_audit_pipeline.py  test_pdc_mock.py
tests/performance/: test_synthetic_million_rows.py
tests/unit/: test_becomino_template_inference.py  test_csv_to_xapi_transform.py  test_explanations.py  test_jsonld_export.py  test_maskott_csv_schema.py  test_metrics_concentration.py  test_metrics_coverage.py  test_metrics_fairness.py  test_model_adapters.py  test_pii_detection.py  test_pseudonymizer.py  test_recipes.py
(+40 files in other folders)
