[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "affectlog"
version = "0.1.0"
description = "AffectLog Trustworthy AI Assessment Building Block (ALT-AI) — D3.7 EDGE-Skills"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "AffectLog Team" },
]
keywords = ["trustworthy-ai", "xapi", "fairness", "explainability", "education", "gdpr", "eu-ai-act"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # Core
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "typer[all]>=0.12.0",
  "rich>=13.7.0",
  # Data processing — streaming / large files
  "polars>=0.20.0",
  "pyarrow>=15.0.0",
  "duckdb>=0.10.0",
  # Config
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  # Privacy / hashing
  "cryptography>=42.0.0",
  # ML adapters (optional extras below)
  "scikit-learn>=1.4.0",
  "joblib>=1.3.0",
  # HTTP
  "httpx>=0.27.0",
  # JSON-LD
  "pyld>=2.0.4",
  # Reporting
  "jinja2>=3.1.0",
  # Misc
  "python-multipart>=0.0.9",
  "orjson>=3.10.0",
  "ulid-py>=1.1.0",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.17.0"]
torch = ["torch>=2.2.0"]
tensorflow = ["tensorflow>=2.15.0"]
shap = ["shap>=0.45.0"]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.25.0",
]
dev = [
  "pytest>=8.1.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
  "bandit[toml]>=1.7.8",
  "pip-audit>=2.7.0",
  "pandas>=2.2.0",
  "faker>=25.0.0",
]
all = [
  "affectlog[onnx,torch,tensorflow,shap,docs,dev]",
]

[project.scripts]
affectlog = "affectlog.cli:app"

[project.urls]
Homepage = "https://github.com/roy-saurabh/edge_affectlog"
Documentation = "https://prometheus-x-association.github.io/docs/t-ai-affectlog/"
Repository = "https://github.com/roy-saurabh/edge_affectlog"
Issues = "https://github.com/roy-saurabh/edge_affectlog/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/affectlog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "slow: marks tests as slow (deselect with '-m not slow')",
  "integration: integration tests",
  "unit: unit tests",
]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ARG", "PTH"]
ignore = ["E501", "B008", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "src/affectlog/frontend/"]

[tool.bandit]
exclude_dirs = ["tests", "src/affectlog/frontend"]
skips = ["B101"]  # assert used in tests
